<!--
  ~ Copyright 2020 Andrey Tolpeev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="about_app_text_rate_app">Rate the app</string>
    <string name="about_app_text_found_issue">Found an issue?</string>
    <string name="about_app_subtext_found_issue">Or want to suggest an improvement?</string>
    <string name="about_app_url_found_issue">https://github.com/vase4kin/TeamCityApp/issues/new/choose</string>
    <string name="about_app_text_source_code">Source code</string>
    <string name="about_app_url_source_code">https://github.com/vase4kin/TeamCityApp</string>
    <string name="about_app_text_libraries">Open sources libraries</string>
    <string name="about_app_text_contacts">Contacts</string>
    <string name="about_app_text_dev">Developer details</string>
    <string name="about_app_text_app">Application details</string>
    <string name="about_app_text_server_info">Server info</string>
    <string name="about_app_text_web">Website</string>
    <string name="about_app_text_server_url">Server url</string>
    <string name="about_app_url_web">https://teamcity.app</string>
    <string name="about_app_text_email">Email</string>
    <string name="about_app_email">contact@teamcity.app</string>
    <string name="about_app_email_title">Questions about TeamCityApp</string>
    <string name="about_version">Version</string>
</resources>
